# gst-browser-plugin

./: configure.ac
bundle/: Info.plist  Makefile.am  install.rdf.in  make_osx_bundle.sh
src/: Makefile.am  WrapperView.c  WrapperView.h  fullscreen-window.c  fullscreen-window.h  gbp-np-class.c  gbp-npapi.c  gbp-npapi.h  gbp-player.c  gbp-player.h  gfullscreenwindow.cpp  gfullscreenwindow.h  npapi.h  npn-gate.c  nprt.def  resource.rc
